# postbox

./: .gitignore  .gitmessage.txt  README.md  constraints.py  manage.py  pyproject.toml  requirements.txt  test.sh
.github/workflows/: checks.yml
PostBox/: asgi.py  wsgi.py
PostBox/settings/: __init__.py  base.py  dev.py  prod.py
PostBox/urls/: dev_url.py  prod_url.py  urls.py
account/: models.py  serializers.py  tests.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_initial.py  0003_alter_account_bank_code.py  0004_alter_account_bank_code.py
analysis/: analyzers.py  models.py
analysis/migrations/: 0001_initial.py
core/management/commands/: wait_for_db.py
templates/: account_confirm_delete.html  account_create.html  account_delete.html  account_list.html  base.html  login.html  logout.html  main.html  profile.html  register.html  signup.html  transaction_detail.html  transaction_list_create.html
transaction_history/: models.py  serializers.py  tests.py  urls.py  views.py
transaction_history/migrations/: 0001_initial.py
transaction_history/tests/: transationhistory_test.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_users_name_alter_users_nickname_and_more.py  0003_users_email_verification_token.py  0004_remove_users_username.py
users/tests/: user_create_email_verification_test.py
